--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ prompt-toolkit==1.0.15
 protobuf==3.6.1
 ptyprocess==0.6.0
 pycochleagram==0.1
+pydub==0.23.0
 Pygments==2.2.0
 pyparsing==2.3.0
 python-dateutil==2.7.5
