--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+3to2==1.1.1
 absl-py==0.6.1
 appnope==0.1.0
+audioread==2.1.6
 backports-abc==0.5
 backports.functools-lru-cache==1.5
 backports.shutil-get-terminal-size==1.0.0
@@ -22,12 +24,15 @@ ipython==5.8.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
 Jinja2==2.10
+joblib==0.13.0
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 kiwisolver==1.0.1
+librosa==0.6.2
+llvmlite==0.26.0
 Markdown==3.0.1
 MarkupSafe==1.1.0
 matplotlib==2.2.3
@@ -36,6 +41,7 @@ mock==2.0.0
 nbconvert==5.4.0
 nbformat==4.4.0
 notebook==5.7.0
+numba==0.41.0
 numpy==1.15.4
 pandocfilters==1.4.2
 pathlib2==2.3.2
@@ -47,7 +53,6 @@ prometheus-client==0.4.2
 prompt-toolkit==1.0.15
 protobuf==3.6.1
 ptyprocess==0.6.0
-pycochleagram==0.1
 pydub==0.23.0
 Pygments==2.2.0
 pyparsing==2.3.0
@@ -55,7 +60,9 @@ python-dateutil==2.7.5
 pytz==2018.7
 pyzmq==17.1.2
 qtconsole==4.4.3
+resampy==0.2.1
 scandir==1.9.0
+scikit-learn==0.20.1
 scipy==1.1.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
